--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+.container{
+	height:650px;
+	width:400px;
+	padding:5px;
+	background-color:whitesmoke;
+	text-align:center;
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	align-items:center;
+}
+img{
+	height:200px;
+	width:300px;
+	margin:0px
+}
+button{
+	padding:10px;
+	color:white;
+	background-color:red;
+	border-radius:10px;
+	font-size:40px;
+	border:none;
+	margin:20px;
+}
+h1{
+	font-size:55px;
+	margin:0px;
+}
+p{
+	font-size:40px;
+	margin:0px;
+}
